[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "padd"
version = "0.7.1"
authors = [
  { name="Mike 'Fuzzy' Partin", email="fuzzy@thwap.org" },
]
description = "A (maybe slightly?) more advanced drop-in replacement for `dd`"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
]

[project.scripts]
padd = "padd:main"
